# iroh-smart-fan

./: .gitignore  README.md
smart-fan-cli/: Cargo.toml  README.md
smart-fan-cli/src/: main.rs
smart-fan-esp32/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
smart-fan-esp32/.cargo/: config.toml
smart-fan-esp32/src/: insecure_verifier.rs  main.rs  quic_crypto_provider.rs  std_dns_resolver.rs
smart-fan-proto/: Cargo.toml  README.md
smart-fan-proto/src/: lib.rs
smart-fan-wasm/: Cargo.toml  README.md  package.json
smart-fan-wasm/.cargo/: config.toml
smart-fan-wasm/public/: index.html  main.js  style.css
smart-fan-wasm/public/wasm/: smart_fan_wasm.d.ts  smart_fan_wasm.js  smart_fan_wasm_bg.wasm  smart_fan_wasm_bg.wasm.d.ts
smart-fan-wasm/scripts/: bundle.mjs
smart-fan-wasm/src/: lib.rs
smart-fan-wasm/variants/: remote-thermometer.html  smart-fan-readonly.html  smart-fan.html
