# SHIPPING-BUILD OPTION: uncomment this line together with `panic = "immediate-abort"`
# below and `build-std = ["std"]` in .cargo/config.toml to drop ~75 KB of panic-message
# machinery. Cost: zero panic diagnostics on serial — only do this once development is done.
# cargo-features = ["panic-immediate-abort"]

[package]
name = "smart-fan-esp32"
version = "0.1.0"
authors = ["Ruediger Klaehn <rklaehn@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "smart-fan-esp32"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
# SHIPPING-BUILD OPTION: swap the line above for `panic = "immediate-abort"` (and enable
# the cargo-features line at the top of this file + set build-std = ["std"] in
# .cargo/config.toml). Saves ~75 KB by trapping at panic sites with no message/formatting,
# at the cost of all panic info on serial. Keep "abort" for development.
# panic = "immediate-abort"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"
lto = true
codegen-units = 1

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
iroh = { git = "https://github.com/n0-computer/iroh", branch = "refactor-hickory", default-features = false }
iroh-relay = { git = "https://github.com/n0-computer/iroh", branch = "refactor-hickory", default-features = false }
iroh-tickets = "1.0.0"
tokio = { version = "1", features = ["rt"] }
rustls-rustcrypto = { git = "https://github.com/n0-computer/rustls-rustcrypto", branch = "feature-flag-algorithms-v0.0.2", default-features = false, features = ["std", "p256"] }
rustls = { version = "0.23", default-features = false }
aes = "0.8"
aes-gcm = "0.10"
n0-error = "1.0.0"
n0-future = "0.3"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
# iroh-base: unify the copy used by iroh (this branch) and iroh-tickets (crates.io).
iroh-base = { git = "https://github.com/n0-computer/iroh", branch = "refactor-hickory" }
# netwatch esp-idf support (posix_minimal) is upstreamed in 0.19 — no patch needed.
