[package]
name = "smart-fan-proto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared irpc protocol for the smart-fan ESP32"

# Board-agnostic: no esp-idf deps, no [patch]. Builds on the host (for the CLI) and
# on xtensa-esp32-espidf (as a dep of the firmware, which supplies the ring-free
# iroh/irpc patch graph-wide).
[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
# The RPC surface. default-features = false drops the test-only cert utilities;
# `spans` is required because the rpc_requests macro emits `.parent_span_opt()`.
irpc = { version = "0.17", default-features = false, features = ["rpc", "spans", "derive", "stream"] }
# The rpc_requests macro expands to tracing spans in this crate.
tracing = "0.1"
